--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ __pycache__/
 *.py[cod]
 
 # Ignore environment and configuration files
-*.env
-*.DS_Store
+.env
+.DS_Store
 
 # Ignore cache files
 .cache
